apps/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:0.25.0
          ports:
            - name: http
              containerPort: 5230
          resources:
            requests:
              memory: 50Mi
            limits:
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-pvc
