apps/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
spec:
  selector:
    app: memos
  ports:
    - name: http
      protocol: TCP
      port: 5230
      targetPort: 5230
  type: ClusterIP
